src/main/webapp/css/style.css
/* ... */
				
					ul.icons li a:hover
					{
						color: #ef8376;
					}

		ol.style1
		{
		}

	/* Forms */

		form
		{
		}
		
			form label
			{
				display: block;
			}
		
			form input.text,
			form select,
			form textarea
			{
				-webkit-appearance: none;
				display: block;
				border: 0;
				background: #ccc;
				width: 100%;
			}

				form input.text:hover,
				form select:hover,
				form textarea:hover
				{
				}

				form input.text:focus,
				form select:focus,
				form textarea:focus
				{
				}
				
				form textarea
				{
					min-height: 9em;
				}

				form .formerize-placeholder
				{
					color: #555 !important;
				}

				form ::-webkit-input-placeholder
				{
					color: #555 !important;
				}

				form :-moz-placeholder
				{
					color: #555 !important;
				}

				form ::-moz-placeholder
				{
					color: #555 !important;
				}

				form :-ms-input-placeholder
				{
					color: #555 !important;
				}

				form ::-moz-focus-inner
				{
					border: 0;
				}
			
	/* Tables */
	
		table
		{
			width: 100%;
		}
		
			table.style1
			{
				width: 100%;
			}
			
				table.style1 tbody tr:nth-child(2n+2)
				{
					background: #f4f4f4;
				}
				
				table.style1 td
				{
					padding: 0.5em 1em 0.5em 1em;
				}
				
				table.style1 th
				{
					text-align: left;
					font-weight: 400;
					padding: 0.5em 1em 0.5em 1em;
				}
			
				table.style1 thead
				{
					background: #444;
					color: #fff;
				}
				
				table.style1 tfoot
				{
					background: #eee;
				}
				
				table.style1 tbody
				{
				}

	/* Buttons */
		
		.button
		{
			position: relative;
			display: inline-block;
			background: #0D5E85;
			color: #fff;
			text-align: center;
			border-radius: 0.5em;
			text-decoration: none;
			padding: 0.65em 3em 0.65em 3em;
			border: 0;
			cursor: pointer;
			outline: 0;
		}

			.button:hover
			{
				color: #fff;
				background: #198CC4;
			}
			
			.button:active
			{
			}
		
			.button.alt
			{
			}

				.button.alt:hover
				{
				}
				
				.button.alt:active
				{
				}
		
			.button.small
			{
			}
			
			.button.big
			{
			}
			
			.button.huge
			{
			}
			
	/* Posts */

		.post
		{
		}
		
			.post.stub
			{
				text-align: center;
			}
			
				.post.stub header
				{
					margin: 0;
				}

/*********************************************************************************/
/* Icons                                                                         */
/* Powered by Font Awesome by Dave Gandy | http://fontawesome.io                 */
/* Licensed under the SIL OFL 1.1 (font), MIT (CSS)                              */
/*********************************************************************************/

	.fa
	{
		text-decoration: none;
	}

		.fa.solo
		{
		}
		
			.fa.solo span
			{
				display: none;
			}

		.fa.circled
		{
			position: relative;
			display: inline-block;
			background: #2b252c;
			color: #fff;
			border-radius: 100%;
			width: 3.5em;
			height: 3.5em;
			line-height: 3.5em;
			text-align: center;
			font-size: 1em;
		}
		
			.fa.circled:before
			{
				font-size: 2em;
				line-height: 1.75em;
			}

			header .fa.circled
			{
				margin: 0 0 2em 0;
			}

		.fa:before
		{
			display:inline-block;
			font-family: FontAwesome;
			font-size: 1.25em;
			text-decoration: none;
			font-style: normal;
			font-weight: normal;
			line-height: 1;
			-webkit-font-smoothing:antialiased;
			-moz-osx-font-smoothing:grayscale;
		}

		.fa-lg{font-size:1.3333333333333333em;line-height:.75em;vertical-align:-15%}
		.fa-2x{font-size:2em}
		.fa-3x{font-size:3em}
		.fa-4x{font-size:4em}
		.fa-5x{font-size:5em}
		.fa-fw{width:1.2857142857142858em;text-align:center}
		.fa-ul{padding-left:0;margin-left:2.142857142857143em;list-style-type:none}.fa-ul>li{position:relative}
		.fa-li{position:absolute;left:-2.142857142857143em;width:2.142857142857143em;top:.14285714285714285em;text-align:center}.fa-li.fa-lg{left:-1.8571428571428572em}
		.fa-border{padding:.2em .25em .15em;border:solid .08em #eee;border-radius:.1em}
		.pull-right{float:right}
		.pull-left{float:left}
		.fa.pull-left{margin-right:.3em}
		.fa.pull-right{margin-left:.3em}
		.fa-spin{-webkit-animation:spin 2s infinite linear;-moz-animation:spin 2s infinite linear;-o-animation:spin 2s infinite linear;animation:spin 2s infinite linear}
		@-moz-keyframes spin{0%{-moz-transform:rotate(0deg)} 100%{-moz-transform:rotate(359deg)}}@-webkit-keyframes spin{0%{-webkit-transform:rotate(0deg)} 100%{-webkit-transform:rotate(359deg)}}@-o-keyframes spin{0%{-o-transform:rotate(0deg)} 100%{-o-transform:rotate(359deg)}}@-ms-keyframes spin{0%{-ms-transform:rotate(0deg)} 100%{-ms-transform:rotate(359deg)}}@keyframes spin{0%{transform:rotate(0deg)} 100%{transform:rotate(359deg)}}.fa-rotate-90{filter:progid:DXImageTransform.Microsoft.BasicImage(rotation=1);-webkit-transform:rotate(90deg);-moz-transform:rotate(90deg);-ms-transform:rotate(90deg);-o-transform:rotate(90deg);transform:rotate(90deg)}
		.fa-rotate-180{filter:progid:DXImageTransform.Microsoft.BasicImage(rotation=2);-webkit-transform:rotate(180deg);-moz-transform:rotate(180deg);-ms-transform:rotate(180deg);-o-transform:rotate(180deg);transform:rotate(180deg)}
		.fa-rotate-270{filter:progid:DXImageTransform.Microsoft.BasicImage(rotation=3);-webkit-transform:rotate(270deg);-moz-transform:rotate(270deg);-ms-transform:rotate(270deg);-o-transform:rotate(270deg);transform:rotate(270deg)}
		.fa-flip-horizontal{filter:progid:DXImageTransform.Microsoft.BasicImage(rotation=0, mirror=1);-webkit-transform:scale(-1, 1);-moz-transform:scale(-1, 1);-ms-transform:scale(-1, 1);-o-transform:scale(-1, 1);transform:scale(-1, 1)}
		.fa-flip-vertical{filter:progid:DXImageTransform.Microsoft.BasicImage(rotation=2, mirror=1);-webkit-transform:scale(1, -1);-moz-transform:scale(1, -1);-ms-transform:scale(1, -1);-o-transform:scale(1, -1);transform:scale(1, -1)}
		.fa-stack{position:relative;display:inline-block;width:2em;height:2em;line-height:2em;vertical-align:middle}
/* ... */

